--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -27,10 +27,10 @@
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
-                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('perfil').invalid && addressForm.get('perfil').touched) ||
               (addressForm.get('perfil').invalid && estaEditando)
@@ -80,10 +80,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('hvRequeridas').invalid && addressForm.get('hvRequeridas').touched) ||
                     (addressForm.get('hvRequeridas').invalid && estaEditando)
@@ -136,10 +136,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('hvRecibidas').invalid && addressForm.get('hvRecibidas').touched) ||
                     (addressForm.get('hvRecibidas').invalid && estaEditando)
@@ -192,10 +192,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('hvAprovadas').invalid && addressForm.get('hvAprovadas').touched) ||
                     (addressForm.get('hvAprovadas').invalid && estaEditando)
@@ -241,10 +241,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('fecha').invalid && addressForm.get('fecha').touched) ||
                     (addressForm.get('fecha').invalid && estaEditando)
@@ -291,10 +291,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
                   (addressForm.get('observaciones').invalid && estaEditando)
@@ -335,10 +335,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (control.get(i).invalid && control.get(i).touched) || (control.get(i).invalid && estaEditando)
                     "
@@ -378,29 +378,29 @@
           <mat-form-field class="full-width">
             <input matInput #numeroRadicadoInput type="text" formControlName="url" maxlength="20" required />
           </mat-form-field>
+          <span class="icon-incompleto">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                (addressForm.get('url').invalid && addressForm.get('url').touched) ||
+                (addressForm.get('url').invalid && estaEditando)
+              "
+            />
+          </span>
           <span
             class="info-url"
             [matTooltipPosition]="'above'"
             matTooltip="Campo alfanumérico"
             matTooltipClass="info-tooltip"
-            >Indique la ruta en la que se encuentra el soporte de las hojas de vida y el Acta de aprobación de
-            personal.</span
           >
+            Indique la ruta en la que se encuentra el soporte de las hojas de vida y el Acta de aprobación de personal.
+          </span>
         </div>
-        <span class="icon-incompleto">
-          <img
-            class="icon-incompleto--img"
-            src="assets/img/icon/incompleto.svg"
-                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
-            *ngIf="
-              (addressForm.get('url').invalid && addressForm.get('url').touched) ||
-              (addressForm.get('url').invalid && estaEditando)
-            "
-          />
-        </span>
       </div>
     </mat-card-content>
   </mat-card>
