--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/hojas-vida-interventoria-artc/hojas-vida-interventoria-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/hojas-vida-interventoria-artc/hojas-vida-interventoria-artc.component.html
@@ -74,7 +74,12 @@
         </quill-editor>
       </div>
       <span class="contador miles" *ngIf="addressForm.get('observaciones').value !== null">
-        {{ 1000 - textoLimpio(obsCvInterventoria.quillEditor, 1000) }}
+        {{
+          1000 -
+            (textoLimpio(obsCvInterventoria.quillEditor) > 1000
+              ? 1000
+              : textoLimpio(obsCvInterventoria.quillEditor))
+        }}
       </span>
       <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null"> 1000 </span>
       <span class="icon-incompleto">
