--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -74,7 +74,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="row">
-                <div class="pr-1 mt-1em">
+                <div class="pr-1">
                   <label
                     class="label-left"
                     for="perfilCodigo"
@@ -87,7 +87,7 @@
                   </label>
                 </div>
                 <div class="col d-flex">
-                  <mat-form-field style="margin-top: .7em;">
+                  <mat-form-field>
                     <mat-select formControlName="perfilCodigo" class="padding-left" required>
                       <mat-option *ngFor="let perfilCv of perfilesCv" [value]="perfilCv.codigo">
                         {{ perfilCv.nombre }}
@@ -290,7 +290,7 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row">
-                <div class="pr-1 mt-1em">
+                <div class="pr-1">
                   <label
                     class="label-left"
                     for="fechaAprobacion"
@@ -431,11 +431,6 @@
                           maxlength="20"
                           formControlName="numeroRadicado"
                           required
-                          [class.invalid]="
-                            numero.get('numeroRadicado').value.length > 0
-                              ? numero.get('numeroRadicado').markAsUntouched()
-                              : numero.get('numeroRadicado').markAsTouched()
-                          "
                         />
                       </mat-form-field>
                       <span
@@ -538,11 +533,6 @@
                       maxlength="400"
                       formControlName="rutaSoporte"
                       required
-                      [class.invalid]="
-                        perfil.get('rutaSoporte').value.length > 0
-                          ? perfil.get('rutaSoporte').markAsUntouched()
-                          : perfil.get('rutaSoporte').markAsTouched()
-                      "
                     />
                   </mat-form-field>
                 </div>
