--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acuerdo-cofinanciacion/components/registrar-acuerdo/registrar-acuerdo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acuerdo-cofinanciacion/components/registrar-acuerdo/registrar-acuerdo.component.html
@@ -46,10 +46,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (datosAportantes.controls.vigenciaEstado.invalid &&
                       datosAportantes.controls.vigenciaEstado.touched) ||
@@ -104,10 +104,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (datosAportantes.controls.numAportes.invalid && datosAportantes.controls.numAportes.touched) ||
                       (datosAportantes.controls.numAportes.invalid && estaEditando)
@@ -165,10 +165,10 @@
                         <img
                           class="icon-incompleto--img"
                           src="assets/img/icon/incompleto.svg"
-                                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
                           *ngIf="
                             (aportante.get('tipo').invalid && aportante.get('tipo').touched) ||
                             (aportante.get('tipo').invalid && estaEditando)
@@ -211,10 +211,10 @@
                     <img
                       class="icon-incompleto--img"
                       src="assets/img/icon/incompleto.svg"
-                                    alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
                       *ngIf="
                         (aportante.get('nombre').invalid && aportante.get('nombre').touched) ||
                         (aportante.get('nombre').invalid && estaEditando)
@@ -263,10 +263,10 @@
                         <img
                           class="icon-incompleto--img"
                           src="assets/img/icon/incompleto.svg"
-                                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
                           *ngIf="
                             (aportante.get('departamento').invalid && aportante.get('departamento').touched) ||
                             (aportante.get('departamento').invalid && estaEditando)
@@ -316,10 +316,10 @@
                         <img
                           class="icon-incompleto--img"
                           src="assets/img/icon/incompleto.svg"
-                                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
                           *ngIf="
                             (aportante.get('municipio').invalid && aportante.get('municipio').touched) ||
                             (aportante.get('municipio').invalid && estaEditando)
@@ -377,10 +377,10 @@
                           <img
                             class="icon-incompleto--img"
                             src="assets/img/icon/incompleto.svg"
-                                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
                             *ngIf="
                               (aportante.get('cauntosDocumentos').invalid &&
                                 aportante.get('cauntosDocumentos').touched) ||
@@ -489,10 +489,10 @@
                         <img
                           class="icon-incompleto--img"
                           src="assets/img/icon/incompleto.svg"
-                                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
                           *ngIf="!documento.vigenciaAporte && documento.cofinanciacionAportanteId > 0"
                         />
                       </span>
@@ -541,10 +541,10 @@
                           <img
                             class="icon-incompleto--img"
                             src="assets/img/icon/incompleto.svg"
-                                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
                             *ngIf="
                               ((documento.valorDocumento < 1 || documento.valorDocumento == undefined) &&
                                 documento.cofinanciacionAportanteId > 0) ||
@@ -583,10 +583,10 @@
                         <img
                           class="icon-incompleto--img"
                           src="assets/img/icon/incompleto.svg"
-                                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
                           *ngIf="!documento.tipoDocumentoId && documento.cofinanciacionAportanteId > 0"
                         />
                       </span>
@@ -602,7 +602,7 @@
                           class="label-left"
                           [ngClass]="{
                             'color-secondaryColor':
-                              (documento.numeroActa.length < 1 || documento.numeroActa == '') &&
+                              (!documento.numeroActa || documento.numeroActa == '') &&
                               documento.cofinanciacionAportanteId > 0
                           }"
                         >
@@ -636,12 +636,12 @@
                           <img
                             class="icon-incompleto--img"
                             src="assets/img/icon/incompleto.svg"
-                                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
                             *ngIf="
-                              (documento.numeroActa.length < 1 || documento.numeroActa == '') &&
+                              (!documento.numeroActa || documento.numeroActa == '') &&
                               documento.cofinanciacionAportanteId > 0
                             "
                           />
@@ -684,10 +684,10 @@
                           <img
                             class="icon-incompleto--img"
                             src="assets/img/icon/incompleto.svg"
-                                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
                             *ngIf="!documento.fechaActa && documento.cofinanciacionAportanteId > 0"
                           />
                         </span>
@@ -738,10 +738,10 @@
                           <img
                             class="icon-incompleto--img"
                             src="assets/img/icon/incompleto.svg"
-                                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
                             *ngIf="
                               (documento.numeroAcuerdo < 1 || documento.numeroAcuerdo == undefined) &&
                               documento.cofinanciacionAportanteId > 0
@@ -788,10 +788,10 @@
                           <img
                             class="icon-incompleto--img"
                             src="assets/img/icon/incompleto.svg"
-                                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
                             *ngIf="!documento.fechaAcuerdo && documento.cofinanciacionAportanteId > 0"
                           />
                         </span>
