--- a/asivamosffie.web/asivamosffie/src/app/shared/components/footer/footer.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer class="footer">
-    Copyright © Todos los Derechos Reservados 2020
+    Copyright © Todos los Derechos Reservados
+    {{ currentYear }}
     <aside class="footer--aside">
         Diseñado por:
         <a href="https://ivolucion.com" target="_blank" rel="noopener noreferrer" class="footer--link">
