--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
@@ -1255,9 +1255,9 @@
           <div class="col-md-8">
             <div class="row">
               <div class="pr-1">
-                <label class="label-left" [ngClass]="{ 'color-secondaryColor': !aportantes.valorObra && estaEditando }"
-                  >Valor obra</label
-                >
+                <label class="label-left" [ngClass]="{ 'color-secondaryColor': !aportantes.valorObra && estaEditando }">
+                  Valor obra
+                </label>
               </div>
               <div class="col d-flex">
                 <mat-form-field class="full-width">
@@ -1283,7 +1283,7 @@
                 </span>
                 <span class="icon-incompleto">
                   <img
-                    *ngIf="!proyecto.valorObra && estaEditando"
+                    *ngIf="!aportantes.valorObra && estaEditando"
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
                     alt="este campo es requerido"
@@ -1303,8 +1303,9 @@
                 <label
                   class="label-left"
                   [ngClass]="{ 'color-secondaryColor': !aportantes.valorInterventoria && estaEditando }"
-                  >Valor interventoría</label
                 >
+                  Valor interventoría
+                </label>
               </div>
               <div class="col d-flex">
                 <mat-form-field class="full-width">
@@ -1330,7 +1331,7 @@
                 </span>
                 <span class="icon-incompleto">
                   <img
-                    *ngIf="!proyecto.valorInterventoria && estaEditando"
+                    *ngIf="!aportantes.valorInterventoria && estaEditando"
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
                     alt="este campo es requerido"
