--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-descripcion-del-proceso-de-seleccion/form-descripcion-del-proceso-de-seleccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-descripcion-del-proceso-de-seleccion/form-descripcion-del-proceso-de-seleccion.component.html
@@ -42,10 +42,10 @@
       <img
         class="icon-incompleto--img"
         src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+        alt="este campo es requerido"
+        [matTooltipPosition]="'above'"
+        matTooltip="Debe ingresar la información en el campo para continuar"
+        matTooltipClass="info-tooltip"
         *ngIf="
           (addressForm.get('objeto').invalid && addressForm.get('objeto').touched) ||
           (addressForm.get('objeto').invalid && estaEditando)
@@ -99,10 +99,10 @@
       <img
         class="icon-incompleto--img"
         src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+        alt="este campo es requerido"
+        [matTooltipPosition]="'above'"
+        matTooltip="Debe ingresar la información en el campo para continuar"
+        matTooltipClass="info-tooltip"
         *ngIf="
           (addressForm.get('alcanceParticular').invalid && addressForm.get('alcanceParticular').touched) ||
           (addressForm.get('alcanceParticular').invalid && estaEditando)
@@ -156,10 +156,10 @@
       <img
         class="icon-incompleto--img"
         src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+        alt="este campo es requerido"
+        [matTooltipPosition]="'above'"
+        matTooltip="Debe ingresar la información en el campo para continuar"
+        matTooltipClass="info-tooltip"
         *ngIf="
           (addressForm.get('justificacion').invalid && addressForm.get('justificacion').touched) ||
           (addressForm.get('justificacion').invalid && estaEditando)
@@ -213,10 +213,10 @@
       <img
         class="icon-incompleto--img"
         src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+        alt="este campo es requerido"
+        [matTooltipPosition]="'above'"
+        matTooltip="Debe ingresar la información en el campo para continuar"
+        matTooltipClass="info-tooltip"
         *ngIf="
           (addressForm.get('criterios').invalid && addressForm.get('criterios').touched) ||
           (addressForm.get('criterios').invalid && estaEditando)
@@ -253,10 +253,10 @@
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
-                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('tipoIntervencion').invalid && addressForm.get('tipoIntervencion').touched) ||
               (addressForm.get('tipoIntervencion').invalid && estaEditando)
@@ -290,10 +290,10 @@
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
-                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('tipoAlcance').invalid && addressForm.get('tipoAlcance').touched) ||
               (addressForm.get('tipoAlcance').invalid && estaEditando)
@@ -324,7 +324,7 @@
             <img
               class="icon-incompleto--img"
               src="assets/img/icon/incompleto.svg"
-                            alt="este campo es requerido"
+              alt="este campo es requerido"
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
@@ -376,7 +376,7 @@
             <img
               class="icon-incompleto--img"
               src="assets/img/icon/incompleto.svg"
-                            alt="este campo es requerido"
+              alt="este campo es requerido"
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
@@ -424,10 +424,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (grupo.get('nombreGrupo').invalid && grupo.get('nombreGrupo').touched) ||
                       (grupo.get('nombreGrupo').invalid && estaEditando)
@@ -462,10 +462,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (grupo.get('tipoPresupuesto').invalid && grupo.get('tipoPresupuesto').touched) ||
                     (grupo.get('tipoPresupuesto').invalid && estaEditando)
@@ -522,10 +522,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (grupo.get('valor').invalid && grupo.get('valor').touched) ||
                       (grupo.get('valor').invalid && estaEditando)
@@ -578,10 +578,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (grupo.get('valorMinimoCategoria').invalid && grupo.get('valorMinimoCategoria').touched) ||
                       (grupo.get('valorMinimoCategoria').invalid && estaEditando)
@@ -639,10 +639,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (grupo.get('valorMaximoCategoria').invalid && grupo.get('valorMaximoCategoria').touched) ||
                       (grupo.get('valorMaximoCategoria').invalid && estaEditando)
@@ -692,10 +692,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (grupo.get('plazoMeses').invalid && grupo.get('plazoMeses').touched) ||
                       (grupo.get('plazoMeses').invalid && estaEditando)
@@ -759,9 +759,7 @@
                       </span>
                       <span
                         class="contador mt-1em"
-                        *ngIf="
-                          !cronograma.get('descripcion').value || cronograma.get('descripcion').value == null
-                        "
+                        *ngIf="!cronograma.get('descripcion').value || cronograma.get('descripcion').value == null"
                         [matTooltipPosition]="'above'"
                         matTooltip="Registre aquí las descripción de la actividad"
                         matTooltipClass="info-tooltip"
@@ -909,10 +907,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('responsableEquipoestructurado').invalid &&
                         addressForm.get('responsableEquipoestructurado').touched) ||
@@ -932,7 +930,14 @@
           >
             <br />
             <div class="d-flex align-items-center">
-              <div class="text-area-quill">
+              <div
+                class="text-area-quill"
+                [class.color-secondaryColor]="
+                  (addressForm.get('condicionesJuridicas').invalid &&
+                    addressForm.get('condicionesJuridicas').touched) ||
+                  (addressForm.get('condicionesJuridicas').invalid && estaEditando)
+                "
+              >
                 <label
                   for="condicionesJuridicas"
                   class="text-area-quill--label"
@@ -981,10 +986,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('condicionesJuridicas').invalid &&
                       addressForm.get('condicionesJuridicas').touched) ||
@@ -994,7 +999,14 @@
               </span>
             </div>
             <div class="d-flex align-items-center">
-              <div class="text-area-quill">
+              <div
+                class="text-area-quill"
+                [class.color-secondaryColor]="
+                  (addressForm.get('condicionesFinancieras').invalid &&
+                    addressForm.get('condicionesFinancieras').touched) ||
+                  (addressForm.get('condicionesFinancieras').invalid && estaEditando)
+                "
+              >
                 <label
                   for="condicionesFinancieras"
                   class="text-area-quill--label"
@@ -1043,10 +1055,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('condicionesFinancieras').invalid &&
                       addressForm.get('condicionesFinancieras').touched) ||
@@ -1056,7 +1068,13 @@
               </span>
             </div>
             <div class="d-flex align-items-center">
-              <div class="text-area-quill">
+              <div
+                class="text-area-quill"
+                [class.color-secondaryColor]="
+                  (addressForm.get('condicionesTecnicas').invalid && addressForm.get('condicionesTecnicas').touched) ||
+                  (addressForm.get('condicionesTecnicas').invalid && estaEditando)
+                "
+              >
                 <label
                   for="condicionesTecnicas"
                   class="text-area-quill--label"
@@ -1105,10 +1123,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('condicionesTecnicas').invalid &&
                       addressForm.get('condicionesTecnicas').touched) ||
@@ -1118,7 +1136,14 @@
               </span>
             </div>
             <div class="d-flex align-items-center">
-              <div class="text-area-quill">
+              <div
+                class="text-area-quill"
+                [class.color-secondaryColor]="
+                  (addressForm.get('condicionesAsignacion').invalid &&
+                    addressForm.get('condicionesAsignacion').touched) ||
+                  (addressForm.get('condicionesAsignacion').invalid && estaEditando)
+                "
+              >
                 <label
                   for="condicionesAsignacion"
                   class="text-area-quill--label"
@@ -1167,10 +1192,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('condicionesAsignacion').invalid &&
                       addressForm.get('condicionesAsignacion').touched) ||
